--- a/nxpearl/src/main/resources/econyx.properties
+++ b/nxpearl/src/main/resources/econyx.properties
@@ -1,10 +1,13 @@
 
-shared.buildId=31/05/2013 11:20 (IS009)
+shared.buildId=12/06/2013 18:30 (IS000)
 
 initService.alwaysInitOnStartup=false
 initService.initOnStartup=false
 initService.counterTest=false
 initService.initProductImages=false
+
+it.mate.econyx.server.services.impl.PortalServiceAdapterImpl.useInstanceCache=true
+it.mate.econyx.server.services.impl.PortalServiceAdapterImpl.pageTemplatesConfigPath=META-INF/setup-data/templates.xml
 
 shared.siteGoogleAccountAuthenticationEnabled=false
 
@@ -38,9 +41,6 @@ client.ProductListView.showImage=true
 
 client.ProductView.prezzoGroupPanel.visible=true
 
-client.ProducerEditOrderListView.askDeliveryInformations=true
-client.ProducerEditOrderListView.defaultDeliveryInformations=RITIRO: MARTEDI' {giorno MESE} PRESSO LA PARROCCHIA S. GIUSEPPE MOSCATI IN VIA LIBERO LEONARDI 41
-
 client.CalendarActivity.calendarDatePageCode=event
 
 client.OrderListView.asynchLoad.orderStates=SHI
@@ -51,8 +51,6 @@ generalService.gdata.consumerKey=gaspar8est.appspot.com
 generalService.gdata.consumerSecret=gJuLS48AuWXmstZZ-muvmur-
 generalService.gdata.scope=https://docs.google.com/feeds/
 generalService.gdata.oauthCallback=http://gaspar8net.appspot.com/step2
-
-customAdapter.debug.saldoIniziale=100
 
 server.refreshCache.enabled=true
 
@@ -66,8 +64,6 @@ it.mate.econyx.shared.services.OrderService.showWaitPanel=true
 it.mate.econyx.shared.services.PortalPageService.showWaitPanel=true
 it.mate.econyx.shared.services.PortalUserService.showWaitPanel=true
 it.mate.econyx.shared.services.ProductService.showWaitPanel=true
-
-it.mate.econyx.server.services.impl.PortalServiceAdapterImpl.useInstanceCache=true
 
 mail.sender.debug=false
 mail.sender.host=
