--- a/econyx-base-app/bin/setenv.bat.sample
+++ b/econyx-base-app/bin/setenv.bat.sample
@@ -21,3 +21,6 @@ SET M2_HOME=D:\OPT\apache-maven-2.2.1
 :: 20/05/2013
 set GAE_HOME=D:\OPT\gwt\appengine\appengine-java-sdk-1.7.7.1
 
+:: 17/06/2013
+set GAE_HOME=D:\OPT\gwt\appengine\appengine-java-sdk-1.8.0
+
