--- a/dev-medup/src/main/resources/econyx.properties
+++ b/dev-medup/src/main/resources/econyx.properties
@@ -1,13 +1,14 @@
 
-shared.buildId=12/06/2013 18:30 (IS000)
+shared.buildId=21/06/2013 15:00 (IS000)
 
 initService.alwaysInitOnStartup=false
 initService.initOnStartup=false
 initService.counterTest=false
 initService.initProductImages=false
 
-// TODO >>> RIMETTERE A FALSE
-it.mate.econyx.server.services.impl.PortalServiceAdapterImpl.useInstanceCache=false
+// TODO >>> RIMETTERE A true prima di fare deploy
+it.mate.econyx.server.services.impl.PortalServiceAdapterImpl.useInstanceCache=true
+#it.mate.econyx.server.services.impl.PortalServiceAdapterImpl.useInstanceCache=false
 it.mate.econyx.server.services.impl.PortalServiceAdapterImpl.pageTemplatesConfigPath=META-INF/setup-data/templates.xml
 
 shared.siteGoogleAccountAuthenticationEnabled=false
