--- a/dev-medup/.project
+++ b/dev-medup/.project
@@ -31,4 +31,11 @@
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>com.google.gwt.eclipse.core.gwtNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>appengine-web-link</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/src/main/webapp/WEB-INF/appengine-web.xml</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
