--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/HomeViewViewUiBinderImplGenMessages.properties
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/HomeViewViewUiBinderImplGenMessages.properties
@@ -5,4 +5,4 @@
 app.presentation=<span class="ckdAppPresentation">CKD Risk Calculator</span>
 #app.presentation=<span class="ckdAppPresentation" style="color: rgb(248, 242, 242);font-size: 22pt;padding-top: 20px;font-weight: bold;">CKD Risk Calculator</span>
 
-app.versionCredits=Version 0.24 - Powered by XY
+app.versionCredits=Version 1.00 - Powered by DevMedup
