--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/CKDInputViewViewUiBinderImplGenMessages.properties
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/CKDInputViewViewUiBinderImplGenMessages.properties
@@ -15,7 +15,7 @@ heigth.um.text=cm
 
 female.text=Female
 
-black.text=Afro-Amer.
+black.text=Afroameric.
 
 albumine.text=Albuminuria
 albumine.um.text=mg/g
