--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
@@ -1,4 +1,10 @@
 
+extendedVersion=true
+
+tabletAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CKD Risk Calculator
+
+phoneAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CKD Risk Calc
+
 HomeView_paramBtn_text=Insert parameters
 
 CKDOutputView_headerBackButton_text=Parameters
@@ -13,6 +19,6 @@ CKDOutputView_highRisk_text=HIGH
 
 CKDOutputView_veryHighRisk_text=VERY HIGH
 
-HomeView_devInfo_visible=false
+HomeView_devInfo_visible=true
 
 SpinnerDoubleBox_enSeparator_fix_enabled=true
