--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
@@ -22,3 +22,40 @@ CKDOutputView_veryHighRisk_text=VERY HIGH
 HomeView_devInfo_visible=false
 
 SpinnerDoubleBox_enSeparator_fix_enabled=true
+
+ProtocolStep_1_QuestionText=Have you find positive <br> reagent strip results?
+ProtocolStep_1_Answer1Text=Yes
+ProtocolStep_1_Answer1Step=2
+ProtocolStep_1_Answer2Text=No
+ProtocolStep_1_Answer2EndText=No further investigation needed
+
+ProtocolStep_2_QuestionText=Are urine cloudy?
+ProtocolStep_2_Answer1Text=Yes
+ProtocolStep_2_Answer1EndText=MSU for C&S: treat infection if positive.<br>Repeat reagent strip
+ProtocolStep_2_Answer2Text=No
+ProtocolStep_2_Answer2Step=3
+
+ProtocolStep_3_QuestionText=Measure of urinary ACR:
+ProtocolStep_3_Answer1Text=>=300 mg/g
+ProtocolStep_3_Answer1EndText=Severely increased proteinuria: refer for specialist assessment e.g., possible biopsy
+ProtocolStep_3_Answer2Text=>=30 mg/g
+ProtocolStep_3_Answer2Step=4
+
+ProtocolStep_4_QuestionText=Need 2 further EMU samples for ACR in the past 2 months. Have you requested them?
+ProtocolStep_4_Answer1Text=Yes
+ProtocolStep_4_Answer1Step=5
+ProtocolStep_4_Answer2Text=No
+ProtocolStep_4_Answer2EndText=Please request the samples
+
+ProtocolStep_5_QuestionText=Is EMU ACR >= 30 mg/g in at least 1 of 2 subsequent samples?
+ProtocolStep_5_Answer1Text=No
+ProtocolStep_5_Answer1EndText=Continue routine observation
+ProtocolStep_5_Answer2Text=Yes
+ProtocolStep_5_Answer2Step=6
+
+ProtocolStep_6_QuestionText=Hematuria?
+ProtocolStep_6_Answer1Text=Yes
+ProtocolStep_6_Answer1EndText=Refer for specialist assessment e.g.
+ProtocolStep_6_Answer2Text=No
+ProtocolStep_6_Answer2EndText=Moderately increased albuminuria
+
