--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
@@ -3,6 +3,8 @@ tabletAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CKD Risk Calculator
 
 phoneAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CKD Risk Calc
 
+versionCredits=Version 1.0.5.E - Powered by Medup Dev.
+
 HomeView_paramBtn_text=Insert parameters
 
 CKDOutputView_headerBackButton_text=Parameters
