--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
@@ -3,7 +3,7 @@ tabletAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CKD Risk Calculator
 
 phoneAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CKD Risk Calc
 
-versionCredits=Version 1.0.5.H - Powered by Medup Dev.
+versionCredits=Version 1.0.6 - Powered by Medup Dev.
 
 HomeView_paramBtn_text=Insert parameters
 
