--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppProperties.properties
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppProperties.properties
@@ -9,6 +9,8 @@ HomeView_devInfo_visible=false
 
 HomeView_langInfo_visible=false
 
+CKDOutputView_adjust_ckdHelpBtn_position=false
+
 SpinnerDoubleBox_enSeparator_fix_enabled=false
 
 SpinnerIntegerBox_keyPress_fix_enabled=true
