--- a/gae-endp-test/pom.xml
+++ b/gae-endp-test/pom.xml
@@ -79,6 +79,13 @@
         <configuration>
           <enableJarClasses>false</enableJarClasses>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+            <version>${appengine.target.version}</version>
+          </dependency>
+        </dependencies>
         <executions>
           <!-- 
           <execution>
