--- a/gae-endp-test/gae-endp-mobile-test/gwt/bin/setenv.bat.sample
+++ b/gae-endp-test/gae-endp-mobile-test/gwt/bin/setenv.bat.sample
@@ -1,7 +1,4 @@
 
-set JAVA_HOME=d:\opt\jdk1.7.0_21
+set JAVA_HOME=P:\OPT\java\jdk1.7.0_17
 
-SET M2_HOME=d:\opt\apache-maven-3.1.1
-
-
-
+SET M2_HOME=P:\opt\apache-maven\apache-maven-3.1.1
