--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants.properties
@@ -3,7 +3,7 @@ tabletAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CKD Risk Calculator
 
 phoneAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CKD Risk Calc
 
-versionCredits=Version 2.0.1.b7 - Powered by Medup Dev.
+versionCredits=Version 2.0.1-B8 - Powered by Medup Dev.
 
 HomeView_paramBtn_text=Insert parameters
 
@@ -19,11 +19,24 @@ CKDOutputView_highRisk_text=HIGH
 
 CKDOutputView_veryHighRisk_text=VERY HIGH
 
+ExtendedView_referralDecision_None_text=None
+ExtendedView_referralDecision_Monitor_text=Monitor
+ExtendedView_referralDecision_Refer_text=Refer
+ExtendedView_referralDecision_ReferWithNephrologyService_text=Refer in agree with Nephrology Service
+
+ExtendedView_monitoringFrequency_1IfCKD_text=1 time/year if CKD
+ExtendedView_monitoringFrequency_1_text=1 time/year
+ExtendedView_monitoringFrequency_2_text=2 time/year
+ExtendedView_monitoringFrequency_3_text=3 time/year
+ExtendedView_monitoringFrequency_4_text=4+ time/year
+
+ProtocolStep_FinishText=Finish
+
 ProtocolStep_1_QuestionText=Have you find positive <br> reagent strip results?
 ProtocolStep_1_Answer1Text=Yes
 ProtocolStep_1_Answer1Step=2
 ProtocolStep_1_Answer2Text=No
-ProtocolStep_1_Answer2EndText=No further investigation needed
+ProtocolStep_1_Answer2EndText=Continue routine observation
 
 ProtocolStep_2_QuestionText=Are urine cloudy?
 ProtocolStep_2_Answer1Text=Yes
@@ -31,11 +44,13 @@ ProtocolStep_2_Answer1EndText=MSU for C&S: treat infection if positive.<br>Repea
 ProtocolStep_2_Answer2Text=No
 ProtocolStep_2_Answer2Step=3
 
-ProtocolStep_3_QuestionText=Measure of urinary ACR:
-ProtocolStep_3_Answer1Text=>=300 mg/g
+ProtocolStep_3_QuestionText=Measure of urinary <br> ACR:
+ProtocolStep_3_Answer1Text=greater than 300 mg/g
 ProtocolStep_3_Answer1EndText=Severely increased proteinuria: refer for specialist assessment e.g., possible biopsy
-ProtocolStep_3_Answer2Text=>=30 mg/g
+ProtocolStep_3_Answer2Text=between 30 mg/g <br> and 300 mg/g
 ProtocolStep_3_Answer2Step=4
+ProtocolStep_3_Answer3Text=less than 30 mg/g
+ProtocolStep_3_Answer3EndText=Continue routine observation
 
 ProtocolStep_4_QuestionText=Need 2 further EMU samples for ACR in the past 2 months. Have you requested them?
 ProtocolStep_4_Answer1Text=Yes
