--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppProperties.properties
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppProperties.properties
@@ -1,6 +1,8 @@
 
 extendedVersion=true
 
+useDebugCKD=true
+
 SpinnerIntegerBox_disableSpinButtons=false
 
 SpinnerDoubleBox_disableSpinButtons=false
