--- a/gae-endp-test/pom.xml
+++ b/gae-endp-test/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.mate</groupId>
   <artifactId>gae-endp-test</artifactId>
@@ -47,19 +48,19 @@
       <artifactId>javax.inject</artifactId>
       <version>1</version>
     </dependency>
-    
+
     <!-- SPRING WEB -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
-    </dependency>    
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context-support</artifactId>
       <version>${spring.version}</version>
     </dependency>
-    
+
     <!-- JACKSON MAPPER -->
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
@@ -67,9 +68,9 @@
       <version>1.9.13</version>
     </dependency>
     <dependency>
-  	  <groupId>com.fasterxml.jackson.core</groupId>
-	  <artifactId>jackson-databind</artifactId>
-	  <version>2.2.3</version>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.2.3</version>
     </dependency>
 
     <!-- LOG4J -->
@@ -84,7 +85,7 @@
       <version>1.5.11</version>
       <scope>runtime</scope>
     </dependency>
-    
+
   </dependencies>
 
   <build>
@@ -117,6 +118,10 @@
         <version>${appengine.target.version}</version>
         <configuration>
           <enableJarClasses>false</enableJarClasses>
+          <jvmFlags>
+            <jvmFlag>-Xdebug</jvmFlag>
+            <jvmFlag>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n</jvmFlag>
+          </jvmFlags>
         </configuration>
         <dependencies>
           <dependency>
@@ -126,13 +131,7 @@
           </dependency>
         </dependencies>
         <executions>
-          <!-- 
-          <execution>
-            <goals>
-              <goal>endpoints_get_discovery_doc</goal>
-            </goals>
-          </execution>
-           -->
+          <!-- <execution> <goals> <goal>endpoints_get_discovery_doc</goal> </goals> </execution> -->
         </executions>
       </plugin>
 
