--- a/trunk/gae-endp-test/src/main/resources/log4j.properties
+++ b/trunk/gae-endp-test/src/main/resources/log4j.properties
@@ -18,4 +18,4 @@ log4j.category.it.mate.econyx.server.services.impl.PortalPageAdapterImpl=WARN
 # DATANUCLES CATEGORIES:
 log4j.category.DataNucleus=WARN
 
-log4j.category.org.springframework=DEBUG
+#log4j.category.org.springframework=DEBUG
