--- a/trunk/gae-endp-test/pom.xml
+++ b/trunk/gae-endp-test/pom.xml
@@ -49,41 +49,10 @@
       <version>1</version>
     </dependency>
 
-    <!-- SPRING WEB -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context-support</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-
-    <!-- JACKSON MAPPER -->
-    <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-mapper-asl</artifactId>
-      <version>1.9.13</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.2.3</version>
-    </dependency>
-
-    <!-- LOG4J -->
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.5.11</version>
-      <scope>runtime</scope>
+      <groupId>it.mate</groupId>
+      <artifactId>gae-endp-test-adapter</artifactId>
+      <version>0.1</version>
     </dependency>
 
   </dependencies>
