--- a/gae-endp-test/gae-endp-mobile-test/gwt/src/main/java/it/mate/gend/client/constants/AppProperties.properties
+++ b/gae-endp-test/gae-endp-mobile-test/gwt/src/main/java/it/mate/gend/client/constants/AppProperties.properties
@@ -1,19 +1,10 @@
 
-extendedVersion=true
+tabletAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GEnd Mobile Tester
 
-SpinnerIntegerBox_disableSpinButtons=false
+phoneAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GEnd Mobile Test
 
-SpinnerDoubleBox_disableSpinButtons=false
+versionCredits=Version 2.0.1.b6 - Powered by Medup Dev.
 
-HomeView_devInfo_visible=true
+HomeView_paramBtn_text=Insert parameters
 
-HomeView_langInfo_visible=false
-
-CKDOutputView_adjust_ckdHelpBtn_position=false
-
-SpinnerDoubleBox_enSeparator_fix_enabled=false
-
-SpinnerIntegerBox_keyPress_fix_enabled=true
-
-SpinnerDoubleBox_keyPress_fix_enabled=true
-
+extendedVersion=false
