--- a/gae-endp-test/pom.xml
+++ b/gae-endp-test/pom.xml
@@ -55,6 +55,13 @@
       <version>0.1</version>
     </dependency>
 
+    <dependency>
+        <groupId>com.google.gwt</groupId>
+        <artifactId>gwt-servlet</artifactId>
+        <version>2.5.1</version>
+    </dependency>
+    
+
   </dependencies>
 
   <build>
