--- a/trunk/gae-endp-test/gae-endp-mobile-test/gwt/src/main/java/it/mate/gend/client/constants/AppProperties.properties
+++ b/trunk/gae-endp-test/gae-endp-mobile-test/gwt/src/main/java/it/mate/gend/client/constants/AppProperties.properties
@@ -1,9 +1,9 @@
 
 tabletAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GEnd Mobile Tester
 
-phoneAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GEnd Mobile Test
+phoneAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Remote Control
 
-versionCredits=Version 2.0.1.b6 - Powered by Medup Dev.
+versionCredits=Version 0.1 - Powered by MDM
 
 HomeView_paramBtn_text=Insert parameters
 
