--- a/gae-endp-test/pom.xml
+++ b/gae-endp-test/pom.xml
@@ -56,11 +56,18 @@
     </dependency>
 
     <dependency>
-        <groupId>com.google.gwt</groupId>
-        <artifactId>gwt-servlet</artifactId>
-        <version>2.5.1</version>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-servlet</artifactId>
+      <version>2.5.1</version>
     </dependency>
-    
+
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20131018</version>
+    </dependency>
+
+
 
   </dependencies>
 
