--- a/gae-endp-test/gae-endp-mobile-test/gwt/src/main/java/it/mate/gend/client/constants/AppProperties.properties
+++ b/gae-endp-test/gae-endp-mobile-test/gwt/src/main/java/it/mate/gend/client/constants/AppProperties.properties
@@ -1,7 +1,7 @@
 
-tabletAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GEnd Mobile Tester
+tabletAppName=Remote Control
 
-phoneAppName=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Remote Control
+phoneAppName=Remote Control
 
 versionCredits=Version 0.1 - Powered by MDM
 
