--- a/trunk/stickmail/gwt/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/stickmail/gwt/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
+launchConfigExternalUrlPrefix=
 warSrcDir=target/stickmail-gwt
 warSrcDirIsOutput=true
