--- a/stickmail/bin/_setenv.bat.sample
+++ b/stickmail/bin/_setenv.bat.sample
@@ -3,5 +3,7 @@ set JAVA_HOME=P:\OPT\java\jdk1.7.0_17
 
 SET M2_HOME=P:\OPT\apache-maven\apache-maven-3.1.1
 
+SET ANT_HOME=D:\OPT\ant\apache-ant-1.9.2
+
 
 
