--- a/stickmail/adapter/.classpath
+++ b/stickmail/adapter/.classpath
@@ -28,5 +28,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
