--- a/stickmail/android/.project
+++ b/stickmail/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>stickmail-android</name>
+	<name>stickmail-android-cdv3</name>
 	<comment></comment>
 	<projects>
 	</projects>
