--- a/stickmail/android/AndroidManifest.xml
+++ b/stickmail/android/AndroidManifest.xml
@@ -1,30 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="it.mate.stickmail" android:versionCode="1"
-  android:versionName="1.0">
-
-  <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17" />
-
+<?xml version='1.0' encoding='utf-8'?>
+<manifest 
+  android:hardwareAccelerated="true" 
+  android:versionCode="1" 
+  android:versionName="0.0.1" 
+  android:windowSoftInputMode="adjustPan" 
+  package="it.mate.stickmail"
+  xmlns:android="http://schemas.android.com/apk/res/android">
+  
+  <supports-screens 
+    android:anyDensity="true" 
+    android:largeScreens="true" 
+    android:normalScreens="true" 
+    android:resizeable="true"
+    android:smallScreens="true" 
+    android:xlargeScreens="true" />
+    
   <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.BROADCAST_STICKY" />
-
+  
+  <uses-sdk
+      android:minSdkVersion="14"
+      android:targetSdkVersion="19" />
+        
   <application 
-      android:allowBackup="true" 
-      android:icon="@drawable/ic_launcher" 
-      android:label="@string/app_name" 
-      android:theme="@style/AppTheme"
-      android:hardwareAccelerated="false" >
-      
+    android:debuggable="true" 
+    android:hardwareAccelerated="false" 
+    android:icon="@drawable/icon" 
+    android:label="@string/app_name">
     <activity 
-      android:name="it.mate.stickmail.MainActivity" 
-      android:label="@string/app_name">
+      android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale" 
+      android:label="@string/app_name" 
+      android:name="StickMail"
+      android:theme="@android:style/Theme.Black.NoTitleBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    
   </application>
 
 </manifest>
