--- a/stickmail/gwt/src/main/java/it/mate/stickmail/client/constants/AppProperties.properties
+++ b/stickmail/gwt/src/main/java/it/mate/stickmail/client/constants/AppProperties.properties
@@ -1,7 +1,7 @@
 
-phoneAppName=Stick Mail
+phoneAppName=Mail Sticker
 
-tabletAppName=Stick Mail
+tabletAppName=Mail Sticker
 
 versionCredits=Version 1.0 - Powered by MDM
 
