--- a/stickmail/android/AndroidManifest.xml
+++ b/stickmail/android/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <activity 
       android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale" 
       android:label="@string/app_name" 
-      android:name="StickMail"
+      android:name="MailSticker"
       android:theme="@android:style/Theme.Black.NoTitleBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
