--- a/stickmail/gwt/src/main/java/it/mate/stickmail/client/constants/AppProperties.properties
+++ b/stickmail/gwt/src/main/java/it/mate/stickmail/client/constants/AppProperties.properties
@@ -3,6 +3,6 @@ phoneAppName=Mail Sticker
 
 tabletAppName=Mail Sticker
 
-versionCredits=Version 1.0 build 125 - Developed by MDM
+versionCredits=Version 1.0 - Developed by MDM
 
 extendedVersion=false
