--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppProperties.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppProperties.properties
@@ -3,6 +3,8 @@ phoneAppName=Therapy Reminder
 
 tabletAppName=Therapy Reminder
 
-versionCredits=Version 0.6 - By MedupDev
+versionNumber=0.7
+
+devName=MedupDev
 
 extendedVersion=false
