--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
@@ -45,6 +45,8 @@ TherapyEditView_flushPrescrizione_msg3=You have to set the hour
 
 TherapyEditView_fillTutorCombo_msg1=To use the TUTOR feature you have to enter at least a tutor. Do you want to insert it now?
 
+TherapyEditView_fillTutorCombo_msg2=To use the TUTOR feature you need to activate the online mode. Do you want to do it now?
+
 TherapyEditView_tipoRicorrenzaCombo_ogniGiorno=Every days
 
 TherapyEditView_tipoRicorrenzaCombo_giorniAlterni=Every 2 days
@@ -80,4 +82,6 @@ ReminderListView_showRow_at_text=at
 ReminderListView_today_text=Today
 
 ReminderListView_tomorrow_text=Tomorrow
+
+SettingsView_onCkbOnlineMode_msg1=In online mode you can send notifications to the tutors: in order to use this feature you must have mobile data connection TURNED ON and you have to create a personal account.
 
