--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactEditViewViewUiBinderImplGenMessages.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactEditViewViewUiBinderImplGenMessages.properties
@@ -5,3 +5,5 @@ deleteBtn.text=Delete
 nameLabel.text=Name:
 emailLabel.text=Email:
 phoneLabel.text=Phone number:
+addressLabel.text=Address:
+hoursLabel.text=Office hours:
