--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditViewViewUiBinderImplGenMessages.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditViewViewUiBinderImplGenMessages.properties
@@ -4,6 +4,7 @@ saveBtn.text=Save
 deleteBtn.text=Delete
 titleLabel.text=Name of medicine:
 startDateLabel.text=Starting date:
+endDateLabel.text=End date:
 qtaLabel.html=Quantity
 notificheLabel.html=Tutor&apos;s alerts
 riordinoLabel.html=Depletion alert
