--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
@@ -27,6 +27,8 @@ ContactEditView_flushModel_msg2=Missing email or phone number
 
 ContactEditView_onDeleteBtn_msg1=Are you sure you want to delete this contact?
 
+ContactEditView_header2_TUTOR_HTML=Insert informations of the TUTOR, the person who want to be informed if you forget to take the medication 
+
 ReminderEditView_setModel_msg1=Did you take this medicine?
 
 ReminderEditView_setModel_title1=Reminder expired
@@ -71,6 +73,8 @@ TherapyEditView_bottomBar_hours=Hours
 
 TherapyListView_onDeleteBtn_msg1=Are you sure you want to delete the selected therapies?
 
+TherapyListView_showListaPrescrizioni_noRows_text=You have no therapies.
+
 ContactListView_showListaContatti_msg1=You have no contacts of this type.
 
 DosageEditView_setModel_msg1=Dosage at {0}
@@ -88,4 +92,6 @@ SettingsView_onCkbOnlineMode_msg1=In online mode you can send notifications to t
 AppClientFactory_FindSomministrazioniScaduteDelegate_msg1=The system has found several doses expired. Do you want to cancel all of them?
 
 AppClientFactory_FindSomministrazioniScaduteDelegate_msg2=Doses cancelled
+
+AccountEditView_flushAndSaveAccount_msg1=You must enter your name
 
