--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
@@ -45,6 +45,8 @@ TherapyEditView_flushPrescrizione_msg2=You have to enter at least one hour
 
 TherapyEditView_flushPrescrizione_msg3=You have to set the hour
 
+TherapyEditView_flushPrescrizione_msg4=End date must be after start date
+
 TherapyEditView_fillTutorCombo_msg1=To use the TUTOR feature you have to enter at least a tutor. Do you want to insert it now?
 
 TherapyEditView_fillTutorCombo_msg2=To use the TUTOR feature you need to activate the online mode. Do you want to do it now?
