--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
@@ -19,6 +19,18 @@ MainActivity_deleteContatto_msg1=This contact cannot be deleted: you have some t
 
 MainController_checkConnectionIfOnlineMode_msg1=In online mode you need to turn on the mobile data connection
 
+MainController_validatePrescrizione_msg1=Missing name of medication
+
+MainController_validatePrescrizione_msg2=Missing hour of administration
+
+MainController_validatePrescrizione_msg2b=Hour of administration not set
+
+MainController_validatePrescrizione_msg3=Wrong quantity
+
+MainController_validatePrescrizione_msg4=Missing time interval
+
+MainController_validatePrescrizione_msg5=Wrong time interval
+
 ContactEditView_onClosingView_msg1=There are some changes. Do you want to save it?
 
 ContactEditView_flushModel_msg1=Missing name
@@ -90,6 +102,10 @@ ReminderListView_showRow_at_text=at
 ReminderListView_today_text=Today
 
 ReminderListView_tomorrow_text=Tomorrow
+
+ReminderListView_showCanceledBtn_text_show=Show canceled administrations
+
+ReminderListView_showCanceledBtn_text_hide=Hide canceled administrations
 
 SettingsView_onCkbOnlineMode_msg1=In online mode you can send notifications to the tutors: in order to use this feature you must have mobile data connection TURNED ON and you have to create a personal account.
 
